syntax = "proto3";

package j5.messaging.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/pentops/j5/gen/j5/messaging/v1/messaging_j5pb";

message UpsertMetadata {
  // The key of the object being updated by this message
  string entity_id = 1;

  // A unique ID for the event triggering this update
  string event_id = 2;

  // Safe ordered timestamp of the event. The event with the
  // newest timestamp is current and superceeds all events.
  // Upsert processors should ignore old events.
  google.protobuf.Timestamp timestamp = 3;
}
