syntax = "proto3";

package j5.messaging.v1;

option go_package = "github.com/pentops/j5/gen/j5/messaging/v1/messaging_j5pb";

message RequestMetadata {
  string reply_to = 1;

  // Context is the responsibility of the requester, it can be whatever the
  // caller likes, e.g. an encoded proto message
  bytes context = 2;
}
