syntax = "proto3";

package j5.state.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "j5/auth/v1/actor.proto";
import "j5/list/v1/annotations.proto";

option go_package = "github.com/pentops/j5/gen/j5/state/v1/psm_j5pb";

message StateMetadata {
  // Time of the first event on the state machine
  google.protobuf.Timestamp created_at = 1 [(j5.list.v1.field).timestamp.sorting = {
    sortable: true
    default_sort: true
  }];

  // Time of the most recent event on the state machine
  google.protobuf.Timestamp updated_at = 2 [(j5.list.v1.field).timestamp.sorting = {sortable: true}];

  // Sequcence number of the most recent event on the state machine
  uint64 last_sequence = 3;
}

message EventMetadata {
  string event_id = 1 [(buf.validate.field).string.uuid = true];

  // Sequence within the state machine. Discrete, 1,2,3
  uint64 sequence = 2;

  google.protobuf.Timestamp timestamp = 3 [
    (buf.validate.field).required = true,
    (j5.list.v1.field).timestamp = {
      sorting: {
        sortable: true
        default_sort: true
      }
      filtering: {filterable: true}
    }
  ];

  Cause cause = 4;
}

// EventPublishMetadata is like EventMetadata but used in publish messages, and
// doesn't cause protostate/psm parsers to think the message is an event.
message EventPublishMetadata {
  string event_id = 1 [(buf.validate.field).string.uuid = true];

  // Sequence within the state machine. Discrete, 1,2,3
  uint64 sequence = 2;

  google.protobuf.Timestamp timestamp = 3 [
    (buf.validate.field).required = true,
    (j5.list.v1.field).timestamp = {
      sorting: {
        sortable: true
        default_sort: true
      }
      filtering: {filterable: true}
    }
  ];
}

// Events are caused by either an actor external to the boundary, an application
// within the boundary, the state machine itself,
message Cause {
  oneof type {
    PSMEventCause psm_event = 1;
    j5.auth.v1.Action command = 2;
    ExternalEventCause external_event = 3;
    InitCause init = 5;
    MessageCause message = 6;
  }
}

message InitCause {
  // The event was caused by the state machine being initialized
}

// The event was caused by a transition in this or another state machine
message PSMEventCause {
  // The ID of the event that caused this event
  string event_id = 1 [(buf.validate.field).string.uuid = true];

  // The identity of the state machine for the event.
  // {package}.{name}, where name is the annotated name in
  // j5.state.v1.(State|Event)ObjectOptions.name
  // e.g. "foo.bar.v1.foobar" (not foo.bar.v1.FooBarState)
  string state_machine = 2;
}

// The event was caused by an external event, e.g. a webhook, a message from a queue, etc.
message ExternalEventCause {
  // The name of the external system that caused the event. No specific format
  // or rules.
  string system_name = 1;

  // The name of the event in the external system. No specific format or rules.
  string event_name = 2;

  // The ID of the event in the external system as defined by that system.
  // ID generation must consistently derivable from the source event.
  // Do not make up IDs from the// current system time or random
  // Leave nil if an acceptable unique ID is not available.
  optional string external_id = 3;
}

// The event was caused by an o5 message
message MessageCause {
  string method = 1 [(buf.validate.field).required = true];

  string message_id = 2;

  // Then o5.application.name which sent the message
  string source_app = 3;

  // The o5.environment.full_name which sent the message
  string source_env = 4;
}
